--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       
-      <link rel="stylesheet" type="text/css" href="sytle.css"/>
+      <link rel="stylesheet" type="text/css" href="main.css"/>
       <title> Technical Documentation Page | FreeCodeCamp</title>
    </head>
    <body>
